[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversary-harness"
version = "0.1.0"
description = "A red-teaming CI harness for LLM agents: prompt-injection, exfiltration, and tool-misuse regression tests."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mahir" }]
keywords = ["llm", "security", "red-team", "prompt-injection", "ai-safety", "evals"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "pyyaml>=6.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
judge = ["anthropic>=0.39"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
adversary = "adversary.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/adversary"
Issues = "https://github.com/YOUR_USERNAME/adversary/issues"

[tool.setuptools.packages.find]
include = ["adversary*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
